--- a/ProgramFINAL/TPA_ES/TPA_ES/View/HRView/RequestSalaryView.xaml
+++ b/ProgramFINAL/TPA_ES/TPA_ES/View/HRView/RequestSalaryView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TPA_ES.View.HRView"
         mc:Ignorable="d"
-        Title="RequestSalaryView" Height="450" Width="800">
+        Title="RequestSalaryView" Height="304.976" Width="664.573">
     <Grid Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -23,21 +23,21 @@
         </Grid.RowDefinitions>
         <Button Name="btnBack" Content="Back" Margin="5,10,38.6,33" Padding="3"
                     Background="LightSeaGreen" Click="btnBack_Click"/>
-        <TextBlock Text="Request Salary Employee" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"
-                   FontSize="25" FontWeight="Bold" HorizontalAlignment="Center" Padding="10" Margin="65.6,0,245.2,0.4" Width="302"/>
+        <TextBlock Text="Request Salary Employee" Grid.Row="0"
+                   FontSize="25" FontWeight="Bold" HorizontalAlignment="Center" Padding="10" Margin="10.2,0,127.2,0" Width="389" Grid.Column="1" Grid.ColumnSpan="2"/>
 
         <TextBlock Text="Employee ID" Grid.Row="1" Grid.Column="0" Margin="5,7.6,4.6,8.2" Padding="3"/>
 
         <TextBlock Text="Salary Request" Grid.Row="3" Grid.Column="0" Margin="5,8,4.6,7.8" Padding="3"/>
 
         <TextBox Name="txtID" Grid.Row="1" Grid.Column="1" Margin="5.4,7.6,4.6,8.2" Padding="3" 
-                 Text="{Binding Path=CurrentEmployee.Id, Mode=TwoWay}"/>
+                 Text="{Binding Path=ID, Mode=TwoWay}"/>
         <TextBox Name="txtFireReasons" Grid.Row="3" Grid.Column="1" Margin="5.4,8,4.6,7.8" Padding="3"
                  Text="{Binding Path=SalaryRequest, Mode=TwoWay}"/>
 
         <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1">
-            <Button Name="btnReq" Content="Request Fire" Margin="5,8" Padding="3"
-                    Command="{Binding Path=SearchEmployeeForViolation}"/>
+            <Button Name="btnReq" Content="Request Salary" Margin="5,8" Padding="3"
+                    Command="{Binding Path=RequestSalaryEmployeeCommand}"/>
         </StackPanel>
         <TextBlock Name="errorMessage" Grid.Row="5" Grid.Column="1" Text="{Binding Path=Message}"/>
     </Grid>
